@@ -50,7 +50,8 @@ bool print_alerts(libtorrent::session& ses, char const* name
 
 void test_sleep(int millisec);
 
-boost::intrusive_ptr<libtorrent::torrent_info> create_torrent(std::ostream* file = 0, int piece_size = 16 * 1024, int num_pieces = 13);
+boost::intrusive_ptr<libtorrent::torrent_info> create_torrent(std::ostream* file = 0
+	, int piece_size = 16 * 1024, int num_pieces = 13, bool add_tracker = true);
 
 boost::tuple<libtorrent::torrent_handle
 	, libtorrent::torrent_handle
@@ -65,6 +66,9 @@ int start_web_server(bool ssl = false);
 void stop_web_server();
 void start_proxy(int port, int type);
 void stop_proxy(int port);
+
+void stop_tracker();
+int start_tracker();
 
 #endif
 
